@@ -69,6 +69,7 @@
     * 4067 FIX: Fixed broken inventory history view in current master...
     * 3917 FIX: Fixed broken dicttable rendering
     * 3918 FIX: Inventory history: Fixed possible exception when renedering history tables...
+    * 4073 FIX: Cleaned up cluster host handling in HW/SW inventory...
 
 
 1.4.0i2:
